Updated to use Defined Canvas

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </script>
   </head>
   <body>
+    <canvas id="RapierCanvas"></canvas>
+
+    <!-- Javascript -->
     <script type="module" src="index.js"></script>
   </body>
 </html>
